@@ -13,12 +13,16 @@ made since the last release of GammaLib.
 
 2. Public interface modifications
 ---------------------------------
+The following methods have been added to the public interface:
+- GObservation::events() (non-const variant)
+
 The following methods have been removed from the public interface:
 - GCTAObservation::dispose_events()
 
 The return value has been changed for the following methods:
 - GFits::filename() returns now GFilename instead of std::string
 - GCTAObservation::eventtype() returns now std::string instead of const std::string&
+
 
 3. Configuration
 -----------------
@@ -62,7 +66,9 @@ None
 
 10. Observation module
 ----------------------
-None
+A non-const GObservation::events() method has been added to allow for
+the manipulation of events within an observation without the need to
+create a local copy.
 
 
 11. Optimization module
